2010-08-29  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/fr.po: Fix 2 fuzzy strings.

2010-08-29  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/usermod.c: Accept options in any order (username not
	necessarily at the end)

2010-08-29  Nicolas François  <nicolas.francois@centraliens.net>

	* autogen.sh: Expand autoreconf to avoid running autopoint.

2010-08-29  Nicolas François  <nicolas.francois@centraliens.net>

	* po/shadow.pot, man/po/shadow-man-pages.pot: Regenerated.
	* po/*.po, man/po/*.po: Updated PO files.

2010-08-28  Brian M. Carlson  <sandals@crustytoothpaste.ath.cx>

	* man/chsh.1.xml: Fix comma splice.

2010-08-28  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/protoypes.h, libmisc/copydir.c, src/useradd.c:
	selinux_file_context renamed set_selinux_file_context.
	* lib/protoypes.h, libmisc/copydir.c, src/useradd.c:
	Added reset_selinux_file_context.
	* src/useradd.c: Check the return value of
	set_selinux_file_context and reset_selinux_file_context.
	* libmisc/copydir.c: Check the return value of
	reset_selinux_file_context.

2010-08-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Fix handling of environment variables when
	the environment is not changed. In particular, this makes su
	behave as documented regarding PATH and IFS (i.e. they are reset)
	when -p is provided.

2010-08-28  Nicolas François  <nicolas.francois@centraliens.net>

	* man/su.1.xml: Fix typo.

2010-08-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c, src/userdel.c, src/grpck.c, src/gpasswd.c,
	src/newusers.c, src/pwconv.c, src/chpasswd.c, src/logoutd.c,
	src/chfn.c, src/groupmems.c, src/usermod.c, src/pwunconv.c,
	src/expiry.c, src/groupdel.c, src/chgpasswd.c, src/useradd.c,
	src/su.c, src/groupmod.c, src/passwd.c, src/pwck.c, src/chage.c,
	src/groupadd.c, src/login.c, src/grpconv.c, src/groups.c,
	src/grpunconv.c, src/chsh.c: Prog changed to a constant string.
